--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ classifiers = [
   "Topic :: Office/Business :: Financial",
 ]
 dependencies = [
-  "requests==2.31.0",
+  "requests>=2.31.0,<3.0",
 ]
 
 [project.urls]
@@ -31,13 +31,13 @@ Homepage = "https://github.com/peberanek/fio-banka"
 
 [project.optional-dependencies]
 development = [
-  "pre-commit==3.3.1",
-  "pytest==7.3.1",
-  "pytest-cov==4.1.0",
+  "pre-commit>=3.3.1,<4.0",
+  "pytest>=7.3.1,<8.0",
+  "pytest-cov>=4.1.0,<5.0",
 ]
 distribution = [
-  "build==0.10.0",
-  "twine==4.0.2",
+  "build>=0.10.0,<1.0",
+  "twine>=4.0.2,<5.0",
 ]
 
 [tool.pytest.ini_options]
